--- a/sweep_config/O31/D_to_W.yaml
+++ b/sweep_config/O31/D_to_W.yaml
@@ -45,7 +45,7 @@ parameters:
   learning_rate_tar:
     values: [5e-6, 7e-6, 1e-5, 2e-5, 5e-5, 7e-5]
   learning_rate_lora:
-    values: [1e-4, 2e-4, 5e-4, 7e-4, 1e-3]
+    values: [1e-5, 5e-5, 7e-5, 1e-4, 2e-4, 5e-4]
   src_init:
     values: [False, True]
   warmup_ratio:
@@ -56,7 +56,7 @@ parameters:
   zeta:
     values: [0.1, 0.5, 1.0, 5.0, 10.0]
   lamb2:
-    values: [0.01, 0.1, 0.2, 0.5, 1.0, 2.0]
+    values: [0.01, 0.1, 0.2, 0.5, 1.0, 2.0, 5.0]
   alpha_decay:
     value: 0.5
   K:
