--- a/sweep_config/OH/Pr_to_Re.yaml
+++ b/sweep_config/OH/Pr_to_Re.yaml
@@ -45,7 +45,7 @@ parameters:
   learning_rate_tar:
     values: [1e-5, 5e-5, 7e-5, 1e-4, 2e-4, 5e-4]
   learning_rate_lora:
-    values: [1e-5, 2e-5, 5e-5, 1e-4]
+    values: [5e-6, 7e-6, 1e-5, 2e-5, 5e-5, 1e-4]
   src_init:
     values: [False, True]
   warmup_ratio:
