--- a/sweep_config/VisDA/Sy_to_Re.yaml
+++ b/sweep_config/VisDA/Sy_to_Re.yaml
@@ -43,9 +43,9 @@ parameters:
   epochs:
     value: 10
   learning_rate_tar:
-    values: [5e-6, 1e-5, 5e-5, 7e-5, 1e-4]
+    values: [!!float 5e-6, !!float 1e-5, !!float 5e-5, !!float 7e-5, !!float 1e-4]
   learning_rate_lora:
-    values: [1e-6, 2e-6, 5e-6, 7e-6, 1e-5]
+    values: [!!float 1e-6, !!float 2e-6, !!float 5e-6, !!float 7e-6, !!float 1e-5]
   src_init:
     values: [False, True]
   warmup_ratio:
