--- a/sweep_config/O31/D_to_A.yaml
+++ b/sweep_config/O31/D_to_A.yaml
@@ -50,6 +50,8 @@ parameters:
     values: [False, True]
   warmup_ratio:
     value: 0.1
+  aug:
+    values: [False, True]
 
   lamb1:
     values: [0.1, 0.5, 1.0, 2.0, 5.0, 10.0]
