1117: add DN126 C_to_S P_to_S config

--- a/sweep_config/DN126/P_to_S.yaml
+++ b/sweep_config/DN126/P_to_S.yaml
@@ -30,7 +30,7 @@ parameters:
   dataset:
     value: "DomainNet-126"
   source:
-    value: "clipart"
+    value: "painting"
   target:
     value: "sketch"
   acc_lower_bound:
